Add list roles RBAC REST API endpoint
This change adds the REST API endpoint to handle listing roles.  This
endpoint is available at /authorization/roles.

Additionally,

- Adds the RestResourceProvider for the RBAC REST resources (in future
  commits, all RBAC-related resources will be provided here)
- Configures the splinter daemon with the resources.
- Add Send version of role-based auth store err
